syntax = "proto3";
option java_multiple_files = true;
package grpc.service.item;
option go_package = "grpc/service/item";

service ItemService {
    rpc getItemById (ItemRequest) returns (ItemResponse) {}
    rpc getItemsByName (ItemRequest) returns (stream Item) {}
    //rpc updateItem (UpdateItemRequest) returns (stream ItemListResponse) {}
}

message ItemRequest {
    int32 id = 1;
    string name = 2;
}

message UpdateItemRequest {
    int32 id = 1;
    string itemName = 2;
    string description = 3;

}

message ItemResponse {
    Item item = 1;
    string message = 2;
}

message Item {
    int32 id = 1;
    string itemName = 2;
    string description = 3;
}